<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.jolie-lang</groupId>
        <artifactId>distribution</artifactId>
        <relativePath>../pom.xml</relativePath>
        <version>1.0.0</version>
    </parent>
    <version>${jolie.version}</version>
    <groupId>org.jolie-lang</groupId>
    <artifactId>jolie-cli</artifactId>
    <name>jolie-cli</name>
	<url>${jolie.url}</url>
    <packaging>jar</packaging>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>11</maven.compiler.release>
    </properties>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.4</version>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <Main-Class>jolie.Jolie</Main-Class>
                            <Class-Path>lib/libjolie.jar jolie.jar</Class-Path>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.1.1</version>
                <executions>
                    <execution>
                        <id>copy-installed</id>
                        <phase>install</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>org.jolie-lang</groupId>
                                    <artifactId>${project.artifactId}</artifactId>
                                    <version>${jolie.version}</version>
                                    <type>jar</type>
                                    <destFileName>${project.artifactId}.jar</destFileName>
                                </artifactItem>
                            </artifactItems>
                            <outputDirectory>${project.parent.basedir}/${jolie.installation.directory}</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <description>The Jolie command line interface.</description>
    <dependencies>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>libjolie</artifactId>
            <version>${jolie.version}</version>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>jolie</artifactId>
            <version>${jolie.version}</version>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>jolie-js</artifactId>
            <version>${jolie.version}</version>
        </dependency>
    </dependencies>
    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub Jolie Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/jolie/jolie</url>
        </repository>
    </distributionManagement>
</project>
